src/main/java/com/example/minishop/infrastructure/error/ApiErrorDetail.java
package com.example.minishop.infrastructure.error;


import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

@Data
@NoArgsConstructor
@AllArgsConstructor
public class ApiErrorDetail {
    private String field;
    private String message;
}